# codecrafters-lox-rust

./: .gitignore  Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
examples/: fibonacci.lox  syntax-error.lox
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  token.rs
src/ast/: expression.rs  mod.rs  operator.rs  printer.rs  statement.rs  utils.rs
src/evaluator/: environment.rs  expression.rs  function.rs  mod.rs  native_function.rs  object.rs  statement.rs
src/evaluator/function/: mod.rs  native_function.rs  user_function.rs
src/parser/: expression.rs  mod.rs  statement.rs
