[package]
name = "rust-lox"
version = "0.1.0"
authors = ["AnsonH <ansonheung2000@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }    # command line parsing
miette = { version = "7.2.0", features = ["fancy"] }    # fancy errors
strum = { version = "0.26", features = ["derive"] }     # enum-string conversion
thiserror = "2.0.3"                             # error handling

[dev-dependencies]
pretty_assertions = "1.4.1"
